# PCI_Concursos_Scrap_Bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
output/: output.txt
src/: main.py  settings.py
src/handlers/: crew_integration.py  messages.py  messages_handler.py  messages_text.py  scrap_csv.py
src/handlers/crewAgents/knowledge/: user_preference.txt
src/handlers/crewAgents/knowledge/users_csv/: readme.txt
src/handlers/crewAgents/src/webscrap_concursos/: crew.py
src/handlers/crewAgents/src/webscrap_concursos/config/: agents.yaml  tasks.yaml
src/handlers/crewAgents/src/webscrap_concursos/tools/: CSVRagTool.py  ConcursoScrapeTool.py  ReadUserPreferencesTool.py  ScrapflyTool.py
