[project]
name = "pci-concursos-scrap-bot"
version = "0.1.0"
description = "Chatbot de telegram que busca concursos públicos através de webscraping pela biblioteca crewai"
authors = [{ name = "João Pedro Kuhn", email = "pedrojoaojpk@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.5.0",
    "dotenv>=0.9.9",
    "pyrogram>=2.0.106",
    "scrapfly-sdk>=0.8.23",
    "tgcrypto>=1.2.5",
]
